# parakh

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: categories.py  config.py  db.py  embeddings.py  main.py  models.py  schemas.py  subtypes.py
backend/app/clients/: label_extractor.py  openfoodfacts.py
backend/app/nutrition/: targets.py
backend/app/repositories/: diet.py  products.py
backend/app/scoring/: nutriscore.py  scorer.py
backend/app/services/: auth.py  meal_estimator.py  rate_limiter.py  scan.py
backend/scripts/: backfill_categories.py  backfill_embeddings.py  catalog_build.py  catalog_extracted.json  catalog_skipped.json  dedupe_products.py  eval_meals.py  seed_catalog.py  seed_products.py
backend/tests/: test_api.py  test_auth.py  test_catalog_build.py  test_categories.py  test_config.py  test_db.py  test_diet_api.py  test_diet_models.py  test_diet_repo.py  test_embeddings.py  test_label_extractor.py  test_meal_estimator.py  test_nutriscore.py  test_openfoodfacts.py  test_products_repo.py  test_rate_limiter.py  test_scan_service.py  test_scorer.py  test_seed_catalog.py  test_subtypes.py  test_targets.py
docs/: catalog-data-pipeline.md
docs/mockups/: diet-tracking-mockup.html
docs/research/: 2026-05-31-india-barcode-data-sourcing.md
frontend/: .env.example  .env.local.example  .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/public/: manifest.webmanifest
(+121 files in other folders)
